--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -100,6 +100,7 @@
     <!-- ===================== Android Project References =====================  -->
     <ItemGroup>
         <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="3.6.0-local.2" />
+        <PackageReference Include="Scanbot.Xamarin.Forms.ImagePicker" Version="1.0.0-local.2" />
     </ItemGroup>
     <ItemGroup>
         <None Remove="Models\" />
