--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid/BarcodeSDK.NET.Droid.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid/BarcodeSDK.NET.Droid.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net7.0-android</TargetFramework>
-        <SupportedOSPlatformVersion>24</SupportedOSPlatformVersion>
+        <SupportedOSPlatformVersion>21.0</SupportedOSPlatformVersion>
         <OutputType>Exe</OutputType>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <ApplicationId>io.scanbot.example.sdk.barcode.xamarin</ApplicationId>
         <ApplicationVersion>1</ApplicationVersion>
@@ -11,5 +11,6 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="ScanbotBarcodeSDK.NET" Version="3.6.0-local.2" />
+        <PackageReference Include="Scanbot.Xamarin.ImagePicker" Version="1.0.0-local.2" />
     </ItemGroup>
 </Project>
