--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.iOS/Info.plist
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.iOS/Info.plist
@@ -1,55 +1,55 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>CFBundleDisplayName</key>
-        <string>ScanbotSDK .NET</string>
-        <key>CFBundleIdentifier</key>
-        <string>io.scanbot.example.sdk.xamarin.forms</string>
-        <key>CFBundleShortVersionString</key>
-        <string>1.0.0</string>
-        <key>CFBundleVersion</key>
-        <string>1.0.0</string>
-        <key>LSRequiresIPhoneOS</key>
-        <true/>
-        <key>MinimumOSVersion</key>
-        <string>14.0</string>
-        <key>UIDeviceFamily</key>
-        <array>
-            <integer>1</integer>
-        </array>
-        <key>UILaunchStoryboardName</key>
-        <string>LaunchScreen</string>
-        <key>UIRequiredDeviceCapabilities</key>
-        <array>
-            <string>armv64</string>
-        </array>
-        <key>UISupportedInterfaceOrientations</key>
-        <array>
-            <string>UIInterfaceOrientationPortrait</string>
-            <string>UIInterfaceOrientationLandscapeLeft</string>
-            <string>UIInterfaceOrientationLandscapeRight</string>
-        </array>
-        <key>UISupportedInterfaceOrientations~ipad</key>
-        <array>
-            <string>UIInterfaceOrientationPortrait</string>
-            <string>UIInterfaceOrientationPortraitUpsideDown</string>
-            <string>UIInterfaceOrientationLandscapeLeft</string>
-            <string>UIInterfaceOrientationLandscapeRight</string>
-        </array>
-        <key>XSAppIconAssets</key>
-        <string>Assets.xcassets/AppIcon.appiconset</string>
-        <key>NSCameraUsageDescription</key>
-        <string>Please provide the camera permission.</string>
-        <key>UIFileSharingEnabled</key>
-        <true/>
-        <key>NSPhotoLibraryAddUsageDescription</key>
-        <string>Application would like to use photos app for importing images</string>
-        <key>NSPhotoLibraryUsageDescription</key>
-        <string>Application would like to use photos app for importing images</string>
-        <key>UIViewControllerBasedStatusBarAppearance</key>
-        <false/>
-        <key>UIStatusBarStyle</key>
-        <string>UIStatusBarStyleLightContent</string>
-    </dict>
+<dict>
+	<key>CFBundleDisplayName</key>
+	<string>ScanbotSDK .NET</string>
+	<key>CFBundleIdentifier</key>
+	<string>io.scanbot.example.sdk.xamarin.forms</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0.0</string>
+	<key>CFBundleVersion</key>
+	<string>1.0.0</string>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>MinimumOSVersion</key>
+	<string>11.0</string>
+	<key>UIDeviceFamily</key>
+	<array>
+		<integer>1</integer>
+	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
+	<key>UIRequiredDeviceCapabilities</key>
+	<array>
+		<string>armv7</string>
+	</array>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>XSAppIconAssets</key>
+	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Please provide the camera permission.</string>
+	<key>UIFileSharingEnabled</key>
+	<true/>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Application would like to use photos app for importing images</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Application would like to use photos app for importing images</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
+</dict>
 </plist>
