--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.iOS/BarcodeSDK.NET.iOS.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.iOS/BarcodeSDK.NET.iOS.csproj
@@ -32,7 +32,7 @@
         <CreatePackage>false</CreatePackage>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="ScanbotBarcodeSDK.NET" Version="3.6.0-local.2" />
         <PackageReference Include="Scanbot.Xamarin.ImagePicker" Version="1.0.0-local.2" />
+        <PackageReference Include="ScanbotBarcodeSDK.NET" Version="3.6.0-alpha.1" />
     </ItemGroup>
 </Project>
