--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.iOS/BarcodeSDK.NET.iOS.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.iOS/BarcodeSDK.NET.iOS.csproj
@@ -33,6 +33,6 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Scanbot.Xamarin.ImagePicker" Version="1.0.0-local.2" />
-        <PackageReference Include="ScanbotBarcodeSDK.NET" Version="3.6.0-alpha.1" />
+        <PackageReference Include="ScanbotBarcodeSDK.NET" Version="3.6.0-beta.1" />
     </ItemGroup>
 </Project>
