--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Platforms/Android/AndroidManifest.xml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Platforms/Android/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.BarcodeSDK.MAUI.Example" android:versionCode="1" android:versionName="1.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="io.scanbot.example.sdk.barcode.maui" android:versionCode="1" android:versionName="1.0">
 	<application android:allowBackup="true" android:supportsRtl="true" android:label="BarcodeSDK MAUI"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
