--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid/AndroidManifest.xml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0.0" package="io.scanbot.example.sdk.barcode.xamarin">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0.0" package="io.scanbot.example.sdk.barcode.net">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
