--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid/BarcodeSDK.NET.Droid.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid/BarcodeSDK.NET.Droid.csproj
@@ -5,7 +5,7 @@
         <OutputType>Exe</OutputType>
         <Nullable>disable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <ApplicationId>io.scanbot.example.sdk.barcode.xamarin</ApplicationId>
+        <ApplicationId>io.scanbot.example.sdk.barcode.net</ApplicationId>
         <ApplicationVersion>1</ApplicationVersion>
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
     </PropertyGroup>
