- [x] All - Updated the nuget package for Image Picker MAUI -- Released on Nuget(not local) - [x] MAUI - Updated the ListView with CollectionView

--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -100,7 +100,7 @@
     <!-- ===================== Android Project References =====================  -->
     <ItemGroup>
         <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="3.6.0-beta.1" />
-        <PackageReference Include="Scanbot.Xamarin.Forms.ImagePicker" Version="1.0.0-local.2" />
+        <PackageReference Include="Scanbot.Xamarin.Forms.ImagePicker" Version="0.0.3-alpha.1" />
     </ItemGroup>
     <ItemGroup>
         <None Remove="Models\" />
