--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -99,7 +99,7 @@
     </ItemGroup>
     <!-- ===================== Android Project References =====================  -->
     <ItemGroup>
-        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="3.6.0-beta.1" />
+        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="3.6.0" />
         <PackageReference Include="Scanbot.Xamarin.Forms.ImagePicker" Version="0.0.3-alpha.1" />
     </ItemGroup>
     <ItemGroup>
