--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.iOS/BarcodeSDK.NET.iOS.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.iOS/BarcodeSDK.NET.iOS.csproj
@@ -2,7 +2,6 @@
     <PropertyGroup>
         <TargetFramework>net7.0-ios</TargetFramework>
         <OutputType>Exe</OutputType>
-        <RootNamespace>DocumentSDK.NET.iOS</RootNamespace>
         <SingleProject>true</SingleProject>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>disable</Nullable>
@@ -11,7 +10,7 @@
         <ApplicationTitle>BarcodeSDK.NET.iOS</ApplicationTitle>
         
         <!-- App Identifier -->
-        <ApplicationId>com.companyname.barcodesdk.maui.example.native.ios</ApplicationId>
+        <ApplicationId>io.scanbot.example.sdk.barcode.net</ApplicationId>
         <ApplicationIdGuid>4653df0b-6b74-4bd0-a889-35f94efbbf0c</ApplicationIdGuid>
         
         <!-- Versions -->
