--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -63,12 +63,11 @@
     </ItemGroup>
     <ItemGroup>
         <Folder Include="Pages\" />
-        <Folder Include="Common\" />
-        <Folder Include="Common\Utils\" />
         <Folder Include="Models\" />
         <Folder Include="ClassicComponent\" />
         <Folder Include="Platforms\Android\Resources\layout\" />
         <Folder Include="Platforms\iOS\Utils\" />
+        <Folder Include="Common\" />
     </ItemGroup>
     <ItemGroup Condition="$(TargetFramework.StartsWith('net7.0-android')) != true">
         <Compile Remove="**\**\*.Android.cs" />
@@ -80,13 +79,10 @@
     </ItemGroup>
     <!-- ===================== Android Project References =====================  -->
     <ItemGroup>
-        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="3.7.0-beta-18" />
-        <PackageReference Include="Scanbot.Xamarin.Forms.ImagePicker" Version="0.0.3-alpha.2" />
+        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="3.7.0-beta-19" />
+        <PackageReference Include="Scanbot.Xamarin.Forms.ImagePicker" Version="0.0.3-beta.1" />
     </ItemGroup>
     <ItemGroup>
       <AndroidResource Include="Platforms\Android\Resources\layout\barcode_camera_view.xml" />
-    </ItemGroup>
-    <ItemGroup>
-      <None Remove="Platforms\iOS\Utils\" />
     </ItemGroup>
 </Project>
