--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid/BarcodeSDK.NET.Droid.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid/BarcodeSDK.NET.Droid.csproj
@@ -10,7 +10,7 @@
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
     </PropertyGroup>
     <ItemGroup>
-         <PackageReference Include="Scanbot.Xamarin.ImagePicker" Version="0.0.3-alpha.2" />
-        <PackageReference Include="ScanbotBarcodeSDK.NET" Version="3.7.0-beta-17" />
+         <PackageReference Include="Scanbot.Xamarin.ImagePicker" Version="0.0.3-beta.1" />
+        <PackageReference Include="ScanbotBarcodeSDK.NET" Version="3.7.0-beta-19" />
     </ItemGroup>
 </Project>
