--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.iOS/BarcodeSDK.NET.iOS.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.iOS/BarcodeSDK.NET.iOS.csproj
@@ -31,6 +31,6 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Scanbot.Xamarin.ImagePicker" Version="0.0.3-beta.1" />
-        <PackageReference Include="ScanbotBarcodeSDK.NET" Version="3.7.0-beta-19" />
+        <PackageReference Include="ScanbotBarcodeSDK.NET" Version="3.7.0" />
     </ItemGroup>
 </Project>
