--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid/BarcodeSDK.NET.Droid.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid/BarcodeSDK.NET.Droid.csproj
@@ -9,8 +9,11 @@
         <ApplicationVersion>1</ApplicationVersion>
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
     </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+      <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
+    </PropertyGroup>
     <ItemGroup>
          <PackageReference Include="Scanbot.Xamarin.ImagePicker" Version="0.0.3-beta.1" />
-        <PackageReference Include="ScanbotBarcodeSDK.NET" Version="3.7.0" />
+        <PackageReference Include="ScanbotBarcodeSDK.NET" Version="3.7.1-alpha.1" />
     </ItemGroup>
 </Project>
