--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -79,7 +79,7 @@
     </ItemGroup>
     <!-- ===================== Android Project References =====================  -->
     <ItemGroup>
-        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="4.0.0-beta.3" />
+        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="4.0.0" />
         <PackageReference Include="Scanbot.Xamarin.Forms.ImagePicker" Version="0.0.3-beta.1" />
     </ItemGroup>
     <ItemGroup>
