--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.iOS/BarcodeSDK.NET.iOS.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.iOS/BarcodeSDK.NET.iOS.csproj
@@ -31,7 +31,7 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Scanbot.Xamarin.ImagePicker" Version="0.0.3-beta.1" />
-        <PackageReference Include="ScanbotBarcodeSDK.NET" Version="4.0.0-beta.3" />
+        <PackageReference Include="ScanbotBarcodeSDK.NET" Version="4.0.0" />
     </ItemGroup>
     <ItemGroup>
       <None Remove="Controllers\ClassicComponents\" />
