--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid.Example/AndroidManifest.xml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid.Example/AndroidManifest.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0.0" package="io.scanbot.example.sdk.barcode.net">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0.0" 
+		package="io.scanbot.example.sdk.barcode.net">
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
