--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid.Example/BarcodeSDK.NET.Droid.Example.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid.Example/BarcodeSDK.NET.Droid.Example.csproj
@@ -12,24 +12,11 @@
         <RootNamespace>BarcodeSDK.NET.Droid</RootNamespace>
         <Platforms>x64;ARM64</Platforms>
         <CreatePackage>false</CreatePackage>
+        <WarningsAsErrors>NU1603</WarningsAsErrors>
     </PropertyGroup>
     <ItemGroup>
          <PackageReference Include="Scanbot.Xamarin.ImagePicker" Version="0.0.3-beta.1" />
-         <PackageReference Include="ScanbotBarcodeSDK.NET" Version="5.1.0-alpha.4" />
-         <PackageReference Include="Xamarin.AndroidX.Activity.Compose" Version="1.7.0" />
-         <PackageReference Include="Xamarin.AndroidX.Activity.Ktx" Version="1.8.2.1" />
-         <PackageReference Include="Xamarin.AndroidX.Collection.Ktx" Version="1.4.0.1" />
-         <PackageReference Include="Xamarin.AndroidX.Compose.Foundation.Layout" Version="1.4.0" />
-         <PackageReference Include="Xamarin.AndroidX.Compose.UI" Version="1.4.0" />
-         <PackageReference Include="Xamarin.AndroidX.Lifecycle.ViewModel.Compose" Version="2.6.1" />
-         <PackageReference Include="Xamarin.AndroidX.Preference" Version="1.2.1.4" />
-         <PackageReference Include="Xamarin.Google.Accompanist.AppCompat.Theme" Version="0.30.1" />
-         <PackageReference Include="Xamarin.Google.Accompanist.DrawablePainter" Version="0.30.1" />
-         <PackageReference Include="Xamarin.Google.Accompanist.FlowLayout" Version="0.30.1" />
-         <PackageReference Include="Xamarin.Google.Accompanist.Pager" Version="0.30.1" />
-         <PackageReference Include="Xamarin.Google.Accompanist.Pager.Indicators" Version="0.30.1" />
-         <PackageReference Include="Xamarin.Google.Accompanist.Permissions" Version="0.30.1" />
-         <PackageReference Include="Xamarin.Google.Accompanist.Placeholder" Version="0.30.1" />
-         <PackageReference Include="Xamarin.Google.Accompanist.SystemUIController" Version="0.30.1" />
+         <PackageReference Include="ScanbotBarcodeSDK.NET" Version="5.1.0-beta.57" />
+        
     </ItemGroup>
 </Project>
