--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid.Example/BarcodeSDK.NET.Droid.Example.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid.Example/BarcodeSDK.NET.Droid.Example.csproj
@@ -18,6 +18,7 @@
     </PropertyGroup>
     <ItemGroup>
          <PackageReference Include="Scanbot.Xamarin.ImagePicker" Version="0.0.3-beta.1" />
-         <PackageReference Include="ScanbotBarcodeSDK.NET" Version="5.1.0-beta.4" />
+         <PackageReference Include="ScanbotBarcodeSDK.NET" Version="5.1.0-beta.8" />
+         <PackageReference Include="Square.OkHttp3" Version="3.14.4" />
     </ItemGroup>
 </Project>
