--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.iOS.Example/BarcodeSDK.NET.iOS.Example.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.iOS.Example/BarcodeSDK.NET.iOS.Example.csproj
@@ -23,7 +23,8 @@
         <CodesignKey>iPhone Developer</CodesignKey>
         <MtouchDebug>true</MtouchDebug>
         <Platforms>x64;ARM64</Platforms>
-        <DefineConstants>$(DefineConstants);LEGACY</DefineConstants>
+        <!-- Comment this out to see RTU v1 in the example -->
+        <!-- <DefineConstants>$(DefineConstants);LEGACY_EXAMPLES</DefineConstants> -->
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Scanbot.Xamarin.ImagePicker" Version="0.0.3-beta.1" />
