--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.iOS.Example/BarcodeSDK.NET.iOS.Example.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.iOS.Example/BarcodeSDK.NET.iOS.Example.csproj
@@ -28,7 +28,7 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Scanbot.Xamarin.ImagePicker" Version="0.0.3-beta.1" />
-        <PackageReference Include="ScanbotBarcodeSDK.NET" Version="5.1.0-beta.4" />
+        <PackageReference Include="ScanbotBarcodeSDK.NET" Version="5.1.0-rc.1" />
     </ItemGroup>
     <ItemGroup>
       <None Remove="Controllers\ClassicComponents\" />
