--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -6,6 +6,7 @@
         <UseMaui>true</UseMaui>
         <SingleProject>true</SingleProject>
         <ImplicitUsings>enable</ImplicitUsings>
+        <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
         <!-- Display name -->
         <ApplicationTitle>ScanbotSDK.Barcode.MAUI.Example</ApplicationTitle>
 
@@ -61,11 +62,13 @@
         <Folder Include="Models\" />
         <Folder Include="Common\" />
     </ItemGroup>
-    <!-- ===================== Android Project References =====================  -->
+
     <ItemGroup>
         <PackageReference Include="Scanbot.Xamarin.Forms.ImagePicker" Version="0.0.3-beta.1" />
-        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="5.1.0-beta.50" />
-        <!-- <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.7" /> -->
+        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="5.1.0-local.8" />    
+    </ItemGroup>
+    <ItemGroup Condition="$(TargetFramework.Contains('net8.'))">
+        <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.*" />
     </ItemGroup>
     <ItemGroup>
       <AndroidResource Include="Platforms\Android\Resources\layout\barcode_camera_view.xml" />
