--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -85,17 +85,17 @@
 
     <ItemGroup Condition="$(TargetFramework.Contains('ios'))">
         <PackageReference Include="Scanbot.Xamarin.Forms.ImagePicker" Version="0.0.3-beta.1" />
-        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="5.1.3-beta.1" />
+        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="5.1.3-rc.1" />
     </ItemGroup>
 
     <ItemGroup Condition="$(TargetFramework.Contains('android'))">
         <PackageReference Include="Scanbot.Xamarin.Forms.ImagePicker" Version="0.0.3-beta.1" />
-        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="5.1.3-beta.1" />
+        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="5.1.3-rc.1" />
     </ItemGroup>
     <ItemGroup Condition="$(TargetFramework.Contains('net8.'))">
         <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.*" />
     </ItemGroup>
     <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
-      <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="5.1.3-beta.1" />
+      <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="5.1.3-rc.1" />
     </ItemGroup>
 </Project>
