--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -84,11 +84,11 @@
     </ItemGroup>
 
     <ItemGroup Condition="$(TargetFramework.Contains('ios'))">
-        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="5.1.1-rc.11" />
+        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="5.1.1" />
     </ItemGroup>
 
     <ItemGroup Condition="$(TargetFramework.Contains('android'))">
-        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="5.1.1-rc.11" />
+        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="5.1.1" />
     </ItemGroup>
     <ItemGroup Condition="$(TargetFramework.Contains('net8.'))">
         <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.*" />
