--- a/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -49,7 +49,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="6.1.0-local.52" />
+        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="6.1.0-alpha.2" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.*" />
     </ItemGroup>
 </Project>
