--- a/BarcodeSDK.NET.Droid.Example/BarcodeSDK.NET.Droid.Example.csproj
+++ b/BarcodeSDK.NET.Droid.Example/BarcodeSDK.NET.Droid.Example.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>net8.0-android</TargetFrameworks>
+        <TargetFramework>net8.0-android</TargetFramework>
         <SupportedOSPlatformVersion>21.0</SupportedOSPlatformVersion>
         <OutputType>Exe</OutputType>
         <Nullable>disable</Nullable>
