--- a/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -19,7 +19,6 @@
         <!-- Supported Platforms -->
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">13.0</SupportedOSPlatformVersion>
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
-        <Platforms>x64;ARM64</Platforms>
         <WarningsAsErrors>NU1603</WarningsAsErrors>
         <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
     </PropertyGroup>
@@ -49,7 +48,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="6.1.0" />
+        <!-- <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="6.1.0" /> -->
+        <ProjectReference Include="../../scanbot-sdk-maui/BarcodeSDK/BarcodeSDK.MAUI/BarcodeSDK.MAUI.csproj" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.*" />
     </ItemGroup>
 </Project>
